[package]
name = "ergo-protocol-framework"
version = "0.2.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
thiserror                        = "1.0.20"
ergo-offchain-utilities          = { git = "https://github.com/robkorn/ergo-utilities-rust" }
ergo-lib                         = "0.4.1"
ergo-lib-wasm                    = "0.4.1"
serde_json                       = "1.0.58"
wasm-bindgen                     = "0.2.68"
reqwest                          = { version = "0.10", features = ["blocking"] }
json                             = "0.12.4"
ergo_protocol_framework_derive   = { path = "ergo-protocol-framework-derive"}