[package]
name = "math-bounty-headless"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ergo-headless-dapp-framework      = { git = "https://github.com/robkorn/ergo-utilities-rust", branch = "EPF-v0.2"}
ergo-lib                     = "0.4.1"
# ergo-lib                         = { git = "https://github.com/ergoplatform/sigma-rust/", branch = "develop", features = ["json"] }
