[package]
name = "math-bounty-cli"
version = "0.1.0"
authors = ["Robert Kornacki <11645932+robkorn@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math-bounty-lib     = {path = "../math-bounty-lib"}
ergo-node-interface = "0.2.2"
nano-get            = { version = "0.2.4", features = ["https"] }